Fix navigation and IPC issues for modern Electron
- Updated preload scripts to use ipcRenderer instead of deprecated ipc module
- Fixed Shadow DOM selector error (::shadow no longer supported)
- Added webview partition for Tor proxy inheritance
- Improved webview CSS sizing
- Enabled DevTools for debugging

--- a/css/browser-page.css
+++ b/css/browser-page.css
@@ -2,6 +2,12 @@
   position: relative;
 }
 
+#browser-page webview {
+  display: block;
+  width: 100%;
+  height: calc(100vh - 59px);
+}
+
 #browser-page-search {
   position: absolute;
   top: 5px;
