Fix webview viewport sizing with flexbox layout
- Implemented proper flexbox layout for browser chrome
- Webview now fills entire available viewport
- Removed manual resize function (CSS handles it automatically)
- Fixed: webview was only showing ~60px of content

--- a/css/browser.css
+++ b/css/browser.css
@@ -1,8 +1,32 @@
-body {
+html, body {
   margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
   font-family: sans-serif;
   overflow: hidden;
 }
+
+#browser-chrome {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+}
+
+#browser-tabs {
+  flex: 0 0 auto;
+}
+
+#browser-navbar {
+  flex: 0 0 auto;
+}
+
+#browser-page {
+  flex: 1 1 auto;
+  position: relative;
+}
+
 #draghandle {
   -webkit-app-region: drag;
   height: 10px;
