--- a/css/browser-page.css
+++ b/css/browser-page.css
@@ -1,11 +1,13 @@
 #browser-page {
   position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 #browser-page webview {
   display: block;
   width: 100%;
-  height: calc(100vh - 59px);
+  height: 100%;
 }
 
 #browser-page-search {
