--- a/css/browser-page.css
+++ b/css/browser-page.css
@@ -1,11 +1,14 @@
 #browser-page {
-  position: relative;
-  width: 100%;
+  overflow: hidden;
   height: 100%;
+  position: relative;
 }
 
 #browser-page webview {
   display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
 }
