--- a/css/browser-page.css
+++ b/css/browser-page.css
@@ -1,14 +1,12 @@
 #browser-page {
-  overflow: hidden;
-  height: 100%;
-  position: relative;
+  position: fixed;
+  top: 65px;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 #browser-page webview {
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
 }
